--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -2,7 +2,7 @@
 id: sfmc-appexchange-overview
 title: SFMC AppExchange Overview
 sidebar_label: SFMC AppExchange
-description: Fill the feature gaps with plug and play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.
+description: Fill the feature gaps with plug-and-play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.
 image: img/og/og-image-sfmc-appexchange-overview.png
 tags: [Marketing Cloud, App, AppExchange]
 ---
@@ -12,52 +12,55 @@ import { Button, ButtonRow } from '../../src/components/Buttons.js';
 import Image from '@theme/IdealImage';
 import flowchart from '../../static/img/article/article-image-appexchange-flowchart.png';
 import segmentation from '../../static/img/article/article-image-appexchange-segmentation.png';
+import queryStudio from '../../static/img/article/article-image-appexchange-query-studio.png';
+import deselectSegment from '../../static/img/article/article-image-appexchange-deselect-segment.png';
+import activationStudio from '../../static/img/article/article-image-appexchange-activation-studio.png';
 
-<LeadText content='Fill the feature gaps with plug and play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.' />
+<LeadText content='Fill the feature gaps with plug-and-play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.' />
 
-AppExchange is an app store for various Clouds within Salesforce Customer 360 platform. You will find there both  in-house solutions coming from Salesforce Labs and 3rd party ones. Free and paid. Good and bad. But all - validated by [Salesforce Security Review](https://developer.salesforce.com/docs/atlas.en-us.packagingGuide.meta/packagingGuide/security_review_guidelines.htm).
+AppExchange is an app store for various Clouds within Salesforce Customer 360 platform. You will find in-house solutions from Salesforce Labs and 3rd party ones. Free and paid. Good and bad. But all - validated by [Salesforce Security Review](https://developer.salesforce.com/docs/atlas.en-us.packagingGuide.meta/packagingGuide/security_review_guidelines.htm).
 
-From over 4000 solutions available there, only around 60 are for the [Saleforce Marketing Cloud](https://appexchange.salesforce.com/category/marketing). Here, I will be focusing only on those I had experience with to provide some value over the standard AppExchange descriptions and marketing materials.
+From over 4000 solutions available there, only around 60 are for the [Saleforce Marketing Cloud](https://appexchange.salesforce.com/category/marketing). Here, I will focus only on those I had experience with to provide some value over the standard AppExchange descriptions and marketing materials.
 
 :::note You Should Know
 
-This document is a living thing. New solutions keep popping up, old ones sometimes disappear or are recreated. I try to keep it up-to-date, but your help with this task will be appreciated.
+This document is a living thing. New solutions keep popping up, and old ones sometimes disappear or are recreated. I try to keep it up-to-date, but your help with this task will be appreciated.
 
 :::
 
 ## When is AppExchange worth it?
 
-Before we jump into specific solutions available in the store, let's talk whether you even should consider going through AppExchange offerings. This question is especially relevant with how feature-packed and customizable the Marketing Cloud is. And not that easy to answer when you consider all decision drivers.
+Before we jump into specific solutions available in the store, let's talk about whether you should consider going through AppExchange offerings. This question is especially relevant with how feature-packed and customizable the Marketing Cloud is. And not that easy to answer when you assess all decision drivers.
 
 ### 1. Define feature requirements
 
-Ok, you want some feature and are eager to find a solution that can deliver it. Now stop. Before opening the AppExchange repository you should first dive deep into what are the exact requirements the solution has to fulfil.
+Ok, you want a feature and are eager to find a solution to deliver it. Now stop. Before opening the AppExchange repository, you should dive deep into the exact requirements the solution has to fulfil.
 
 Key things to consider:
-- __What it needs to do__ - what is minimum valuable outcome and what is an ideal one?
-- __How it needs to do it__ - does it have to be user friendly no-code solution or is developer-oriented approach acceptable?
-- __Where it needs to do it__ - does it have to be done within the SFMC or can it be external?
-- __Who needs to do it__ - do you have resources to implement it or should it be outsourced?
-- __What is the budget__ - does it have to be free, cheap or you can pay for good value?
+- __What it needs to do__ - what is the minimum valuable outcome, and what is an ideal one?
+- __How it needs to do it__ - does it have to be a user-friendly no-code solution, or is a developer-oriented approach acceptable?
+- __Where it needs to do it__ - does it have to be done within the SFMC, or can it be external?
+- __Who needs to do it__ - do you have the resources to implement it, or should it be outsourced?
+- __What is the budget__ - does it have to be free, cheap, or you can pay for good value?
 
-Those requirements should be aligned with the final users and be clear enough to serve as a guardrails for making informed decision.
+Those requirements should be aligned with the final users and be clear enough to serve as a guardrail for making an informed decision.
 
 ### 2. Validate out-of-the-box options
 
-One you have requirements, it's time to check what already is within your Marketing Cloud license. Over the years Salesforce baked in a lot of solutions, so you might find something already there, just waiting to be used.
+Once you have requirements, it's time to check what already is within your Marketing Cloud license. Over the years, Salesforce baked in many solutions, so you might find something already there, just waiting to be used.
 
 :::note You Should Know
 
-Not all solutions are available by default - some require a support ticket to be enabled. Check out my [list of features on-demand](../config/sfmc-config-features-on-demand.mdx) to see whether there is anything hidden that might fulfill your requirements.
+Not all solutions are available by default - some require a support ticket to be enabled. Check out my [list of features on-demand](../config/sfmc-config-features-on-demand.mdx) to see if there is anything hidden that might fulfil your requirements.
 
 :::
 
 However, even if your requirement has an out-of-the-box solution, it doesn't always mean the end of the work. You need to check whether it is good and easy enough:
 
-- __Good Enough__: Just because there is something, it might not fulfill all the requirements you gathered in the first step. Maybe it is to basic for your needs or doesn't have access to all data you want to leverage. This is where you start seeing benefits of the prework you did before.
-- __Easy Enough__: Even if the solution is good enough, it might not be easy enough. Always assess the solution taking into consideration knowledge and skills of the end users - not yours (unless you will be the only end user, of course).
+- __Good Enough__: Just because there is something, it might not fulfil all the requirements you gathered in the first step. Maybe it is too basic for your needs or doesn't have access to all data you want to leverage. It is where you start seeing the benefits of the prework.
+- __Easy Enough__: Even if the solution is good enough, it might not be easy enough. Always assess the solution by considering the knowledge and skills of the end users - not yours (unless you will be the only end user, of course).
 
-If the out-of-the-box solution checks both boxes - you hit a jackpot and can leverage what is alredy there.
+If the out-of-the-box solution checks both boxes - you hit the jackpot and can leverage what is already there.
 
 Else, it's time to look somewhere... else.
 
@@ -65,36 +68,36 @@ Else, it's time to look somewhere... else.
 
 Time to check whether there is any free solution available on demand. You can do it by going to [marketing AppExchange](https://appexchange.salesforce.com/category/marketing) and applying filters to get Free solutions dedicated to Marketing Cloud.
 
-To manage your expectations - for Salesforce Marketing Cloud the list won't be long and even then you have to make sure the app is truly offering a meaningful free tier. Expect free Salesforce Labs solutions (like [Query Studio](#query-studio) covered below) and little pearls made by 3rd parties - like Content Builder asset finder [DESelect Search](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PFaZrEAL).
+To manage your expectations: for Salesforce Marketing Cloud, the list won't be long, and even then, you have to make sure the app is genuinely offering a meaningful free tier. Expect free Salesforce Labs solutions (like [Query Studio](#query-studio) covered below) and little pearls made by 3rd parties - like Content Builder asset finder [DESelect Search](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PFaZrEAL).
 
-If you are lucky enough to find something free in AppExchange that is related to your requirements, be sure to check whether it is good enough. Just as you did in the [previous step](#2-validate-out-of-the-box-options).
+If you are lucky enough to find something free in AppExchange related to your requirements, check whether it is good enough. Just as you did in the [previous step](#2-validate-out-of-the-box-options).
 
 No luck? Before checking the paid filter in AppExchange, there is one more approach to consider.
 
 ### 4. Custom Solution
 
-A decade ago building custom solution for every requirement was all the rage. Since then the platforms and their 3rd party ecostystems has grown a lot, making this approach much less tempting. Why?
+A decade ago, building a custom solution for every requirement was all the rage. Since then, the platforms and their 3rd party ecosystems have grown significantly, making this approach much less tempting. Why?
 
 There are four things to consider:
 
-1. __Can you buld a Custom solution?__ This can be done using in-house developers or outsourced to external specialists but you need either skills or budget.
-2. __Will it be good enough?__ If you have the means, building a custom is easy. But do you have _enough_ skills or budget to build a good solution that will be user friendly, optimized, polished and matching all your requirements?
-3. __Will it be cheaper then AppExchange?__ Sure, with enough time and money, you probably can build something good enough. But will it be cheaper then similar solution available in paid section of AppExchange?
-4. __Will you maintain it?__ Even if you answered yes to previous three points, you need to take into account the maintenance. In most cases building a custom is just the beginning. Requirements change, new needs happen, platforms get updated and require refactor. With AppExchange solutions it _should_ be much less of a worry in the long term.
+1. __Can you build a Custom solution?__ This can be done using in-house developers or outsourced to external specialists, but you need either skills or a budget.
+2. __Will it be good enough?__ If you have the means, building a custom is easy. But do you have _enough_ skills or budget to make a good solution that will be user-friendly, optimized, polished and matching all your requirements?
+3. __Will it be cheaper than AppExchange?__ Sure, with enough time and money, you can build something good enough. But will it be more affordable than a similar solution available in the paid section of AppExchange?
+4. __Will you maintain it?__ Even if you answered yes to the previous three points, you must consider maintenance. In most cases, building a custom is just the beginning. Requirements change, new needs happen, platforms get updated and require refactor. With AppExchange solutions, it _should_ be much less of a worry in the long term.
 
-While the list might look like a hard pass for custom solutions, there is a place for them. Especially on the ends of the spectrum. Simple, but lifesaving micro solutions ([Cloud Page Apps](../usecase/sfmc-cloud-page-apps.mdx), [Code Resources](../usecase/sfmc-code-resource.mdx)) or custom behemots aligned to all non-negotiable quirks and features of your internal processes.
+While the list might look like a hard pass for custom solutions, there is a place for them. Especially on the ends of the spectrum. Simple, but lifesaving micro solutions ([Cloud Page Apps](../usecase/sfmc-cloud-page-apps.mdx), [Code Resources](../usecase/sfmc-code-resource.mdx)) or custom behemoths aligned to all non-negotiable quirks and features of your internal processes.
 
 However, if you hit a hard "no" to any of the above questions, it's time to hit the AppExchange again.
 
 ### 5. Paid AppExchange Solutions
 
-Here we are. After defining the requirements, we haven't found anything worthy among the out-of-the-box solutions, the land of the free AppExchange was bareen and the custom work didn't seem like the best choice. Paid AppExchange it is. But is it really?
+Here we are. After defining the requirements, we haven't found anything worthy among the out-of-the-box solutions, the land of the free AppExchange was barren, and the custom work didn't seem like the best choice. Paid AppExchange it is. But is it really?
 
-Assuming you found a paid solution, you still need to assess whether it will be good enough. The good part here? If you see only small pieces missing from the ideal, you might talk with the solution creators and discuss prioritisation of the future changes.
+Assuming you found a paid solution, you still need to assess whether it will be good enough. The good part here? If you see only small pieces missing from the ideal, you might talk with the solution creators and discuss prioritization of the future changes.
 
-However, you also need to keep in mind the budget. Not only the subscription cost, but also implementation, training, enhancements. After considering all of that - will you still see return on investment? If yes - you are good to go.
+However, you also need to keep in mind the budget. Not only the subscription cost but also implementation, training, and enhancements. After considering all that, will you still see a return on investment? If yes - you are good to go.
 
-If not, it's time to update your requirements - be it the list of needed features or the size of the budget - and [start again](#2-validate-out-of-the-box-options).
+If not, it's time to update your requirements - the list of needed features or the budget size - and [start again](#2-validate-out-of-the-box-options).
 
 ---
 
@@ -106,19 +109,19 @@ Looks complex? Would you rather have an example-based walkthrough? Got you cover
 
 ## SFMC Segmentation Solutions
 
-Finding the right approach to the database segmentation is one of the key elements of successful marketing automation. In Salesforce Marketing Cloud it's a complex topic, because there is no perfect - powerful, simple and free - solution. You need to choose your priorities.
+Finding the right approach to database segmentation is one of the critical elements of successful marketing automation. In Salesforce Marketing Cloud, it's a complex topic because there is no perfect - powerful, simple and free - solution. You need to choose your priorities.
 
-This is great use case to test the ["Is AppExchange worth it?" process](#when-is-appexchange-worth-it) on a real example. Let's check how it works.
+Excellent use case to test the ["Is AppExchange worth it?" process](#when-is-appexchange-worth-it) on a real-life scenario. Let's check how it works.
 
 __1. Feature Requirements__
 
-Let me paraphrase the user story constrains I encounter on nearly every implementation:
+Let me paraphrase the user story constraints I encounter on nearly every implementation:
 
-- As a company I want to have segmenation based on our broad data so that we are sending the right communication to the right persons at the right time.
-- As a marketer I want to have drag and drop segmentation so that it is easy and fast for me to deliver correctly build segments.
+- As a company, I want to have segmentation based on our comprehensive data so that we are sending the right communication to the right persons at the right time.
+- As a marketer, I want to have drag and drop segmentation so that it is easy and fast for me to deliver correctly built segments.
 
-Let's split it into key things to consider:
-- __What it needs to do__ - Segment database using multiple datapoints.
+Let's split it into crucial things to consider:
+- __What it needs to do__ - Segment the database using multiple data points.
 - __How it needs to do it__ - Simple drag and drop solution.
 - __Where it needs to do it__ - Within Marketing Cloud.
 - __Who needs to do it__ - Undecided, but no internal resources for implementation.
@@ -128,35 +131,39 @@ Does it sound familiar? ;)
 
 __2. Out-of-the-box options__
 
-There are two ways to segment contacts in Marketing Cloud core. Filtered Data Extensions and SQL Query Activities. How they stack against our requirements?
+There are two ways to segment contacts in Marketing Cloud core. Filtered Data Extensions and SQL Query Activities. How do they stack against our requirements?
 
-Filtered Data Extensions are free, require nearly no implementation (apart from setting Data Relationships), works directly in SFMC, are simple drag and drop solution, but... They don't support segmenting on more then two Data Extensions. Not good enough.
+Filtered Data Extensions are free, require nearly no implementation (apart from setting Data Relationships), work directly in SFMC, and are a simple drag and drop solution, but... They don't support segmenting on more than two Data Extensions. Not good enough.
 
-SQL Query Activities are free, require no implementation, work directly in SFMC and allow segmenting on multiple datapoints, but... require [SQL](../sql/sfmc-sql-basics.mdx) skills. While those are super useful, they require training and in the beginning the segmentation will be slow and requiring checks to mitigate errors. Not easy enough.
+SQL Query Activities are free, require no implementation, work directly in SFMC and allow segmenting on multiple data points, but... demand [SQL](../sql/sfmc-sql-basics.mdx) skills. It means training requirements, slower segmentation and a higher risk of errors by inexperienced users. Not easy enough.
 
 __3. Free AppExchange__
 
-Filtering the AppExchange for free solutions will show only one related anyhow to segmentation - [Query Studio](#query-studio). While it's great tool, it's still a SQL-based solution and not directly for segmentation purposes. Not good enough.
+Filtering the AppExchange for free solutions will show only one related to segmentation - [Query Studio](#query-studio). While it's a great tool, it's still a SQL-based solution and not directly for segmentation purposes. Not good enough.
 
 __4. Custom Solution__
 
-There are two base options for drag and drop focused custom solution approach.
+There are two base options for the drag and drop custom solution approach.
 
-Generator that modifies predefines segments. It's relatively simple to build, but it only allows small adapations, mostly on filtering ([SQL WHERE](../sql/sfmc-sql-where.mdx). Very limited in possible outcomes and any new needs have to be hard coded. Not good enough and hard to maintain.
+First - generator that modifies predefined segments. It's relatively simple to build, but it allows you to make only minor adaptations of the templated query, mostly on filtering ([SQL WHERE](../sql/sfmc-sql-where.mdx). Very limited and requires hard coding for each new segment template. Not good enough and hard to maintain.
 
-Fully-fledged visual wrapper over SQL queries. Full power with drag and drop interface. Sounds like a dream? Good. Such solution requires a lot of work and testing and the cost would skyrocket well above - spoiler alert - what is available in paid section of AppExchange. Not worth it.
+Second - fully-fledged visual wrapper over SQL queries. Full power with a drag and drop interface. Sounds like a dream? Good. Such a solution requires a lot of work and testing. The cost would skyrocket well above - spoiler alert - what is available in the paid section of AppExchange. Not worth it.
 
 __5. Paid AppExchange__
 
-Finally we get to the last stop and after quick search we can find two solutions: tried and tested [DESelect Segment](#deselect-segment) and the new contender [Activation Studio](#activation-studio). More details on them in the moment, but from perspective of this exercise - both are subscription based, while one of the key things to consider was the beloved "no budget".
+Finally, we get to the last stop. After a quick search, we can find two solutions: tried and tested [DESelect Segment](#deselect-segment) and the new contender [Activation Studio](#activation-studio). More details on them in a moment, but from the perspective of this exercise - both are subscription based, while one of the key things to consider was the beloved "no budget".
 
-Therefore we get to the update requirements step where the company needs to prioritize between powerful, simple and free.
+Therefore we get to the update requirements step, where the company needs to prioritize between powerful, simple and free.
 
 <Image img={segmentation} />
 
-I hope that now it is easier to find the place for AppExchange in solving Marketing Cloud requirements. With that, let's jump to the solutions available there.
+I hope it is now easier to find when AppExchange can solve Marketing Cloud requirements. With that, let's jump to the solutions available there.
+
+---
 
 ### Query Studio
+
+<Image img={queryStudio} />
 
 Creator | Pricing
 - | -
@@ -169,38 +176,42 @@ Query Studio solves two problems:
 1. SFMC SQL Query Testing
 2. SFMC SQL Data Exploratory Analysis
 
-Why I call those problems?
+Why did I call it problems?
 
 Because the only out-of-the-box solution for working with SQL in Marketing Cloud is Query Activity in Automation Studio. It allows you to validate whether your query is valid, but checking if the outcomes are as expected is a pain.
 
-You are able to see the results only after manually creating a data extension with the right set of columns (names, data types, lengths) and executing the Query Activity. Outcomes are suboptimal and need to make some changes? The Data Extension needs a rework.
+You can see the results only after manually creating a data extension with the correct columns (names, data types, lengths) and executing the Query Activity. Outcomes are suboptimal and need to make some changes? The Data Extension needs a rework.
 
-This sometime happens when you are writing and testing a new query. It happens all the time when you are doing exploratory analysis.
+It sometimes happens when you are writing and testing a new query. It happens all the time when you are doing exploratory analysis.
 
-Query Studio automatically builds a temporary Data Extension to store the output of the query on every execution. It also displays a subset of outcomes right below your SQL so that you can easily check whether it is aligned with expectation.
+Query Studio automatically builds a temporary Data Extension to store the query's output on every execution. It also displays a subset of outcomes below your SQL so you can quickly check whether it aligns with your expectations.
 
-And that's not all - Query Studio let's you save your work as ready-to-use Query Activities. Even in a way that is not possible through Automation Studio (like query targeting Auto-Suppression List)!
+And that's not all - Query Studio lets you save your work as ready-to-use Query Activities. Even in a way that is impossible through Automation Studio (like query targeting Auto-Suppression List)!
 
 #### The Bad
 
-However, Query Studio is not perfect. The main issue with it is that it has a different (and not that good) query validation implemented.
+However, Query Studio is not perfect. The main issue is that it has implemented a different (and not that good) query validation.
 
-It means that while every query you write in Query Studio will work in Query Activity, it is not always true the other way round. For example, Query Studio won't let you use comments, parentheses in the first line of the [SELECT](../sql/sfmc-sql-select.mdx) statement, [TOP PERCENT](../sql/sfmc-sql-select.mdx#top-percent), [CAST](../sql/sfmc-sql-conversion-functions.mdx#cast) in [SELECT](../sql/sfmc-sql-select.mdx) and some more elements that are not a problem in Query Activity.
+While every query you write in Query Studio will work in Query Activity, it is not always true the other way round. For example, Query Studio won't let you use comments, parentheses in the first line of the [SELECT](../sql/sfmc-sql-select.mdx) statement, [TOP PERCENT](../sql/sfmc-sql-select.mdx#top-percent), [CAST](../sql/sfmc-sql-conversion-functions.mdx#cast) in [SELECT](../sql/sfmc-sql-select.mdx) and some more elements that are not a problem in Query Activity.
 
-It also have very poor errors making it really hard to properly debug your queries. Sometimes it is useful to just copy the SQL to Query Activity and validate there to get better response.
+It also has very poor errors making it hard to debug your queries properly. Sometimes it is helpful to copy the SQL to Query Activity and validate there to get a better response.
 
-Finally, while it creates temporary Data Extension on execution, it is not useful as a template for the final solution because all fields will have Text data type.
+Finally, while it creates a temporary Data Extension on execution, it is not helpful as a template for the final solution because all fields will have a Text data type.
 
 #### The Sum Up
 
-Despite some quirks, Query Studio is a huge timesaver and quality of life improvement. Useful for creating queries, debugging outcomes and making quick checks on Data Views. A must-have for any SQL-enabled or learning team.
+Despite some quirks, Query Studio is a huge timesaver and quality of life improvement. Useful for creating queries, debugging outcomes, and quick checks on Data Views. A must-have for any SQL-enabled or learning-to-be-enabled team.
 
 <Button
-    link='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000FP3yFUAT'
-    text='AppExchange'
+ link='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000FP3yFUAT'
+ text='AppExchange'
 />
 
+---
+
 ### DESelect Segment
+
+<Image img={deselectSegment} />
 
 Creator | Pricing
 - | -
@@ -208,11 +219,11 @@ DESelect | [Starts at $700/month](https://deselect.com/pricing/)
 
 #### The Good
 
-DESelect Segment is the golden standard for the middle ground between the very limited Filtered Data Extensions and yes-code SQL Queries. Actually, "middle ground" is not fair. Over time it has been polished by the DESelect team to cover nearly all use cases that in the past were possible only with SQL.
+DESelect Segment is the golden standard for the middle ground between the very limited Filtered Data Extensions and yes-code SQL Queries. Actually, "middle ground" is not fair. Over time, DESelect team polished it to cover nearly all use cases that were possible only with SQL in the past.
 
-In a fully drag and drop experience DESelect Segment can:
+In a fully drag and drop experience, DESelect Segment can:
 
-- Join multiple datapoints (both Data Extensions and Data Views)
+- Join multiple data points (both Data Extensions and Data Views)
 - Create complex, multilevel filters (using dynamic dates, aggregates and checks against other Data Extensions)
 - Build segment Data Extension on demand with selected or custom-created columns
 - Deduplicate the data using specified logic
@@ -225,17 +236,17 @@ And it doesn't stop there - there are few features not available out-of-the-box 
 - Build Data Sets that works as templated multi-table relationships for quick drag and drop
 - Share segmentation templates across Business Units to speed up rolling solutions
 
-While the features sound great by themselves, true magic happens when you use them all together. Why? Because it will allow you to create your segment in one place, start to finish.
+While the features sound great, true magic happens when you use them together. Why? Because it will allow you to create your segment in one place, start to finish.
 
 The out-of-the-box path for query segmentation is:
 
 1. Write and test segmentation query in Query Studio (with Contact Builder in another tab to check the values)
 2. Manually create Data Extension that has all needed columns in correct data types and lengths in Contact Builder
-3. Fix it in Email Studio, because Content Builder is bugged around CustomerKey and default Current Date
+3. Fix it in Email Studio because Content Builder is bugged around CustomerKey and default Current Date
 4. Copy the query to Query Activity in Automation Studio
 5. [Optionally] Create Automation
 
-All of that in a streamlined way can be done in DESelect Segment using guided creator. Faster, simpler and less intimidating to beginners. Launched right from the Marketing Cloud main menu.
+All of that in a streamlined way can be done in DESelect Segment using guided creator. Faster, simpler and less intimidating to beginners. Available right in the Marketing Cloud main menu.
 
 Is it perfect then?
 
@@ -243,23 +254,27 @@ Is it perfect then?
 
 Well, there are two issues:
 
-1. It's not free. But it is nicely priced for the power you get. It's up to you whether you want to invest in SQL competencies or no-code solution that can do the same, by everyone, faster.
-2. It's complex. Sure, it's a clean drag-and-drop interface, but because of all the available features, it has some learning curve (and a training offered by DESelect) to leverage its full potential.
+1. It's not free. But it is nicely priced for the power you get. It's up to you whether you want to invest in SQL competencies or a no-code solution that can do the same, by everyone, faster.
+2. It's complex. Sure, it's a clean drag-and-drop interface, but because of all the available features, it has some learning curve (and training offered by DESelect) to leverage its full potential.
 
 #### The Sum Up
 
-If you want to leverage Salesforce Marketing Cloud to it's fullest, you need robust segmentation solution. Filtered Data Extensions ain't it. This leaves you with SQL Query Activity and AppExchange.
+To fully leverage Salesforce Marketing Cloud, you need a robust segmentation solution. Filtered Data Extensions ain't it. It leaves you with SQL Query Activity and AppExchange.
 
-While I'm a big fan of SQL, I know that it's not a tool for everyone. The code always makes scaling the marketing team much harder. DESelect Segment is currently the best solution to solve that problem and, with ongoing updates, it gets better and better at it.
+While I'm a big fan of SQL, I know it's not a tool for everyone. The code always makes scaling the marketing team much harder. DESelect Segment is currently the best solution to solve that problem, and with ongoing updates, it gets better and better at it.
 
 <ButtonRow
-    linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000G0yE1UAJ'
-    textLeft='AppExchange'
-    linkRight='https://deselect.com/segment/'
-    textRight='Website'
+ linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000G0yE1UAJ'
+ textLeft='AppExchange'
+ linkRight='https://deselect.com/segment/'
+ textRight='Website'
 />
 
+---
+
 ### Activation Studio
+
+<Image img={activationStudio} />
 
 Creator | Pricing
 - | -
@@ -267,42 +282,42 @@ Harvest Tech Labs | [Starts at €350/month](https://activation-studio.com/prici
 
 #### The Good
 
-Activation Studio is a new player that joined the SFMC Drag & Drop Segmentation game. Let's check what are it's unqiue identifiers that makes it stand out versus already existing solutions:
+Activation Studio is a new player that joined the SFMC drag & drop segmentation game. Let's check what are the unique selling points that make it stand out versus already existing solutions:
 
 1. Different target
 
-Activation Studio is not targeting power users, but rather digital marketers that need very simple, but potent way of creating segments. You won't be able to leverage the whole power of SQL in a drag and drop interface here. You also won't be able to join all Data Extension available in your Marketing Cloud.
+Activation Studio is not targeting power users but digital marketers that need an effortless but potent way of creating segments. You won't be able to leverage the full power of SQL in a drag-and-drop interface here. You also won't be able to join all Data Extensions available in your Marketing Cloud.
 
-Instead, you will be able to leverage the Attribute Groups built in the Contact Builder Data Desinger. While it is limiting what you can do, it also makes building sgements a breeze, as all relationships are predefined.
+Instead, you can leverage the Attribute Groups built in the Contact Builder Data Designer. While it limits what you can do, it also makes building segments a breeze, as all relationships are already defined.
 
-It let's you quickly create a Data Extension for output and leverage it as an Entry to the Journey. Och, and provide you with engagement benchmarks and analytics of actual performance.
+It lets you quickly create a Data Extension for output and leverage it as an Entry to the Journey. Och, and provide you with engagement benchmarks and analytics of actual performance.
 
-Not a jack-of-all-trades, but purpose build solution.
+Not a jack-of-all-trades, but a purpose build solution.
 
-2. More then just segmentation
+2. More than just segmentation
 
-While segmentation is the core of Activation Studio, there is more features (to be made) available. Lead Scoring and Behavioral data from web are options that can increase the power of the tool significantly. Both are built with simple and easy usage by marketers in mind.
+While segmentation is the core of Activation Studio, there are more features (to be made) available. Lead Scoring and Behavioral data from the web are options that significantly increase the tool's power. Both are built with effortless usage by marketers in mind.
 
-3. Down to earth pricing
+3. Down-to-earth pricing
 
-Activation Studio segmentation is already significantly cheaper then other options and additional features make the price-to-value ratio even better.
+Activation Studio segmentation is already significantly cheaper than other options, and additional features further improve the price-to-value ratio.
 
 #### The Bad
 
-It's a new product and you can still see its infancy. While fully operational already, there are some relatively basic features (like folders) missing.
+It's a new product, and you can still see its infancy. While fully operational already, some relatively basic features (like folders) are missing.
 
-However, the development pipeline is full of features and a lot of improvements will be delivered over the coming months making the value proposition much more interesting.
+However, the development pipeline is full of features, and many improvements will be delivered over the coming months improving the value proposition (and making me rewrite this mini-review).
 
 #### The Sum Up
 
-Activation Studio fills a niche between Filtered Data Extensions and DESelect Segment. More powerful then the former, simpler and easier then latter.
+Activation Studio fills a niche as a segmentation more potent than the Filtered Data Extensions and more effortless than the DESelect Segment (while sacrificing some of its power).
 
-Especially with Scoring and Interaction focused add-ons it will be really good suite of solutions targeted at smaller Marketing Cloud users that would benefit from streamlined tool dedicated to non-technical marketers.
+Especially with Scoring and Interaction-focused add-ons, it will be an excellent suite of solutions targeted at smaller Marketing Cloud users that would benefit from a streamlined tool dedicated to non-technical marketers.
 
 <ButtonRow
-    linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PurpQEAR'
-    textLeft='AppExchange'
-    linkRight='https://activation-studio.com/drag-and-drop-segmentation-salesforce-marketing-cloud/'
-    textRight='Website'
+ linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PurpQEAR'
+ textLeft='AppExchange'
+ linkRight='https://activation-studio.com/drag-and-drop-segmentation-salesforce-marketing-cloud/'
+ textRight='Website'
 />
 
