Final version of AppExchange Overview article

--- a/docs/appexchange/sfmc-appexchange-overview.mdx
+++ b/docs/appexchange/sfmc-appexchange-overview.mdx
@@ -3,7 +3,7 @@ id: sfmc-appexchange-overview
 title: SFMC AppExchange Overview
 sidebar_label: SFMC AppExchange
 description: Fill the feature gaps with plug-and-play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.
-image: img/og/og-image-sfmc-appexchange-overview.png
+image: img/og/og-image-sfmc-appexchange.png
 tags: [Marketing Cloud, App, AppExchange]
 ---
 
@@ -16,11 +16,11 @@ import queryStudio from '../../static/img/article/article-image-appexchange-quer
 import deselectSegment from '../../static/img/article/article-image-appexchange-deselect-segment.png';
 import activationStudio from '../../static/img/article/article-image-appexchange-activation-studio.png';
 
-<LeadText content='Fill the feature gaps with plug-and-play apps. Salesforce Marketing Cloud AppExchange ready-to-use solution highlights.' />
+<LeadText content="Fill the feature gaps with plug-and-play apps. Solution highlights from Salesforce Marketing Cloud's AppExchange." />
 
-AppExchange is an app store for various Clouds within Salesforce Customer 360 platform. You will find in-house solutions from Salesforce Labs and 3rd party ones. Free and paid. Good and bad. But all - validated by [Salesforce Security Review](https://developer.salesforce.com/docs/atlas.en-us.packagingGuide.meta/packagingGuide/security_review_guidelines.htm).
+AppExchange is an app store for various Clouds within Salesforce Customer 360 platform. You will find in-house solutions from Salesforce Labs and 3rd party. Free and paid. Good and bad. But all - validated by [Salesforce Security Review](https://developer.salesforce.com/docs/atlas.en-us.packagingGuide.meta/packagingGuide/security_review_guidelines.htm).
 
-From over 4000 solutions available there, only around 60 are for the [Saleforce Marketing Cloud](https://appexchange.salesforce.com/category/marketing). Here, I will focus only on those I had experience with to provide some value over the standard AppExchange descriptions and marketing materials.
+From over 4000 solutions available there, only around 60 are for the [Saleforce Marketing Cloud](https://appexchange.salesforce.com/category/marketing). Here, I will focus only on those I had experience with to provide some value over the standard AppExchange descriptions.
 
 :::note You Should Know
 
@@ -57,7 +57,7 @@ Not all solutions are available by default - some require a support ticket to be
 
 However, even if your requirement has an out-of-the-box solution, it doesn't always mean the end of the work. You need to check whether it is good and easy enough:
 
-- __Good Enough__: Just because there is something, it might not fulfil all the requirements you gathered in the first step. Maybe it is too basic for your needs or doesn't have access to all data you want to leverage. It is where you start seeing the benefits of the prework.
+- __Good Enough__: Just because there is something, it might not meet all the requirements you gathered in the first step. Maybe it is too basic for your needs or doesn't have access to all data you want to leverage. It is where you start seeing the benefits of the prework.
 - __Easy Enough__: Even if the solution is good enough, it might not be easy enough. Always assess the solution by considering the knowledge and skills of the end users - not yours (unless you will be the only end user, of course).
 
 If the out-of-the-box solution checks both boxes - you hit the jackpot and can leverage what is already there.
@@ -68,7 +68,7 @@ Else, it's time to look somewhere... else.
 
 Time to check whether there is any free solution available on demand. You can do it by going to [marketing AppExchange](https://appexchange.salesforce.com/category/marketing) and applying filters to get Free solutions dedicated to Marketing Cloud.
 
-To manage your expectations: for Salesforce Marketing Cloud, the list won't be long, and even then, you have to make sure the app is genuinely offering a meaningful free tier. Expect free Salesforce Labs solutions (like [Query Studio](#query-studio) covered below) and little pearls made by 3rd parties - like Content Builder asset finder [DESelect Search](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PFaZrEAL).
+To manage your expectations: for Salesforce Marketing Cloud, the list won't be long. And even then, you have to make sure the app is genuinely offering a meaningful free tier. Expect free Salesforce Labs solutions (like [Query Studio](#query-studio) covered below) and little pearls made by 3rd parties - like Content Builder asset finder [DESelect Search](https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3u00000PFaZrEAL).
 
 If you are lucky enough to find something free in AppExchange related to your requirements, check whether it is good enough. Just as you did in the [previous step](#2-validate-out-of-the-box-options).
 
@@ -87,13 +87,13 @@ There are four things to consider:
 
 While the list might look like a hard pass for custom solutions, there is a place for them. Especially on the ends of the spectrum. Simple, but lifesaving micro solutions ([Cloud Page Apps](../usecase/sfmc-cloud-page-apps.mdx), [Code Resources](../usecase/sfmc-code-resource.mdx)) or custom behemoths aligned to all non-negotiable quirks and features of your internal processes.
 
-However, if you hit a hard "no" to any of the above questions, it's time to hit the AppExchange again.
+However, if you hit a hard "no" to any of the above questions, it's time to visit the AppExchange again.
 
 ### 5. Paid AppExchange Solutions
 
 Here we are. After defining the requirements, we haven't found anything worthy among the out-of-the-box solutions, the land of the free AppExchange was barren, and the custom work didn't seem like the best choice. Paid AppExchange it is. But is it really?
 
-Assuming you found a paid solution, you still need to assess whether it will be good enough. The good part here? If you see only small pieces missing from the ideal, you might talk with the solution creators and discuss prioritization of the future changes.
+Assuming you found a paid solution, you still need to assess whether it will be good enough. The positive part here? If you see only small pieces missing from the ideal, you might talk with the solution creators and discuss prioritization of the future changes.
 
 However, you also need to keep in mind the budget. Not only the subscription cost but also implementation, training, and enhancements. After considering all that, will you still see a return on investment? If yes - you are good to go.
 
@@ -109,16 +109,16 @@ Looks complex? Would you rather have an example-based walkthrough? Got you cover
 
 ## SFMC Segmentation Solutions
 
-Finding the right approach to database segmentation is one of the critical elements of successful marketing automation. In Salesforce Marketing Cloud, it's a complex topic because there is no perfect - powerful, simple and free - solution. You need to choose your priorities.
+Finding the right approach to database segmentation is one of the critical elements of successful marketing automation. In Salesforce Marketing Cloud, it's a complex topic because (spoiler) there is no perfect - powerful, simple and free - solution. You need to choose your priorities.
 
-Excellent use case to test the ["Is AppExchange worth it?" process](#when-is-appexchange-worth-it) on a real-life scenario. Let's check how it works.
+Looks like excellent use case to test the ["Is AppExchange worth it?" process](#when-is-appexchange-worth-it) on a real-life scenario, so let's check how it works.
 
 __1. Feature Requirements__
 
 Let me paraphrase the user story constraints I encounter on nearly every implementation:
 
-- As a company, I want to have segmentation based on our comprehensive data so that we are sending the right communication to the right persons at the right time.
-- As a marketer, I want to have drag and drop segmentation so that it is easy and fast for me to deliver correctly built segments.
+- As a company, I want to have segmentation based on our comprehensive data so that we can send the right communication to the right persons at the right time.
+- As a marketer, I want to have a drag and drop segmentation so that it is fast and easy to deliver correctly built segments.
 
 Let's split it into crucial things to consider:
 - __What it needs to do__ - Segment the database using multiple data points.
@@ -139,7 +139,7 @@ SQL Query Activities are free, require no implementation, work directly in SFMC 
 
 __3. Free AppExchange__
 
-Filtering the AppExchange for free solutions will show only one related to segmentation - [Query Studio](#query-studio). While it's a great tool, it's still a SQL-based solution and not directly for segmentation purposes. Not good enough.
+Filtering the AppExchange for free solutions will show only one related to segmentation - [Query Studio](#query-studio). While it's a great tool, it's still a SQL-based solution. It's also not an end-to-end tool for segmentation purposes. Not good enough.
 
 __4. Custom Solution__
 
@@ -147,7 +147,7 @@ There are two base options for the drag and drop custom solution approach.
 
 First - generator that modifies predefined segments. It's relatively simple to build, but it allows you to make only minor adaptations of the templated query, mostly on filtering ([SQL WHERE](../sql/sfmc-sql-where.mdx). Very limited and requires hard coding for each new segment template. Not good enough and hard to maintain.
 
-Second - fully-fledged visual wrapper over SQL queries. Full power with a drag and drop interface. Sounds like a dream? Good. Such a solution requires a lot of work and testing. The cost would skyrocket well above - spoiler alert - what is available in the paid section of AppExchange. Not worth it.
+Second - fully-fledged visual wrapper over SQL queries. Full power with a drag and drop interface. Sounds like a dream? Correct. Such solution requires a lot of work and testing. The cost would skyrocket well above (spoiler alert) what is available in the paid section of AppExchange. Not worth it.
 
 __5. Paid AppExchange__
 
@@ -157,7 +157,7 @@ Therefore we get to the update requirements step, where the company needs to pri
 
 <Image img={segmentation} />
 
-I hope it is now easier to find when AppExchange can solve Marketing Cloud requirements. With that, let's jump to the solutions available there.
+I hope it is now easier to find when AppExchange can solve Marketing Cloud requirements. With that, let's jump to the segmentation solutions available there.
 
 ---
 
@@ -186,21 +186,21 @@ It sometimes happens when you are writing and testing a new query. It happens al
 
 Query Studio automatically builds a temporary Data Extension to store the query's output on every execution. It also displays a subset of outcomes below your SQL so you can quickly check whether it aligns with your expectations.
 
-And that's not all - Query Studio lets you save your work as ready-to-use Query Activities. Even in a way that is impossible through Automation Studio (like query targeting Auto-Suppression List)!
+And that's not all - Query Studio lets you save your work as ready-to-use Query Activities. Even in a way that is impossible through the Automation Studio (like query targeting Auto-Suppression List)!
 
 #### The Bad
 
-However, Query Studio is not perfect. The main issue is that it has implemented a different (and not that good) query validation.
+However, Query Studio is not perfect. The main issue is that it has implemented a different (and not that good) query validation. The outcome?
 
-While every query you write in Query Studio will work in Query Activity, it is not always true the other way round. For example, Query Studio won't let you use comments, parentheses in the first line of the [SELECT](../sql/sfmc-sql-select.mdx) statement, [TOP PERCENT](../sql/sfmc-sql-select.mdx#top-percent), [CAST](../sql/sfmc-sql-conversion-functions.mdx#cast) in [SELECT](../sql/sfmc-sql-select.mdx) and some more elements that are not a problem in Query Activity.
+While every query you write in Query Studio will work in Query Activity, it is not always true the other way round. For example, Query Studio won't let you use comments, parentheses in the first line of the [SELECT](../sql/sfmc-sql-select.mdx) statement, [TOP PERCENT](../sql/sfmc-sql-select.mdx#top-percent), [CAST](../sql/sfmc-sql-conversion-functions.mdx#cast) in [SELECT](../sql/sfmc-sql-select.mdx) and more that are not a problem in Query Activity.
 
-It also has very poor errors making it hard to debug your queries properly. Sometimes it is helpful to copy the SQL to Query Activity and validate there to get a better response.
+It also has very poor error messages making it hard to debug your queries properly. Sometimes it is helpful to copy the SQL to Query Activity and validate there to get a better response.
 
-Finally, while it creates a temporary Data Extension on execution, it is not helpful as a template for the final solution because all fields will have a Text data type.
+Finally, while it creates a temporary Data Extension on execution, it is not helpful as a template for the final solution because all fields have a Text data type regardless of the real data.
 
 #### The Sum Up
 
-Despite some quirks, Query Studio is a huge timesaver and quality of life improvement. Useful for creating queries, debugging outcomes, and quick checks on Data Views. A must-have for any SQL-enabled or learning-to-be-enabled team.
+Despite some quirks, Query Studio is a huge timesaver and quality of life improvement. Useful for creating queries, debugging outcomes, and quick checks on Data Views. Free. A must-have for any SQL-enabled or learning-to-be-enabled team.
 
 <Button
  link='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000FP3yFUAT'
@@ -219,24 +219,25 @@ DESelect | [Starts at $700/month](https://deselect.com/pricing/)
 
 #### The Good
 
-DESelect Segment is the golden standard for the middle ground between the very limited Filtered Data Extensions and yes-code SQL Queries. Actually, "middle ground" is not fair. Over time, DESelect team polished it to cover nearly all use cases that were possible only with SQL in the past.
+DESelect Segment is the golden standard for the middle ground between the very limited Filtered Data Extensions and yes-code SQL Queries. Actually, "middle ground" is not fair.
+
+Over time, DESelect team polished it to cover nearly all use cases that were possible only with SQL in the past. It makes the app more of a no-code alternative to Query Activities then an enhanced Filtered Data Extensions.
 
 In a fully drag and drop experience, DESelect Segment can:
 
 - Join multiple data points (both Data Extensions and Data Views)
 - Create complex, multilevel filters (using dynamic dates, aggregates and checks against other Data Extensions)
-- Build segment Data Extension on demand with selected or custom-created columns
+- Build final Data Extension on demand with selected or custom-created columns
 - Deduplicate the data using specified logic
 - Preview the outcomes to validate the configuration
 
-And it doesn't stop there - there are few features not available out-of-the-box in SFMC that lets you:
+And it doesn't stop there. There are features not available in the out-of-the-box SFMC experience that lets you:
 
 - Create Picklists to mitigate typo issues when working with set lists of values
-- Define Relationships to make joining tables a breeze
 - Build Data Sets that works as templated multi-table relationships for quick drag and drop
 - Share segmentation templates across Business Units to speed up rolling solutions
 
-While the features sound great, true magic happens when you use them together. Why? Because it will allow you to create your segment in one place, start to finish.
+While the features sound great, true magic happens when you use them together. Why? Because they allow you to create your segment in one place, start to finish.
 
 The out-of-the-box path for query segmentation is:
 
@@ -246,7 +247,7 @@ The out-of-the-box path for query segmentation is:
 4. Copy the query to Query Activity in Automation Studio
 5. [Optionally] Create Automation
 
-All of that in a streamlined way can be done in DESelect Segment using guided creator. Faster, simpler and less intimidating to beginners. Available right in the Marketing Cloud main menu.
+DESelect Segment can do all of it in a single, streamlined process using guided creator. Faster, simpler and less intimidating to beginners. Available right in the Marketing Cloud main menu.
 
 Is it perfect then?
 
@@ -261,7 +262,7 @@ Well, there are two issues:
 
 To fully leverage Salesforce Marketing Cloud, you need a robust segmentation solution. Filtered Data Extensions ain't it. It leaves you with SQL Query Activity and AppExchange.
 
-While I'm a big fan of SQL, I know it's not a tool for everyone. The code always makes scaling the marketing team much harder. DESelect Segment is currently the best solution to solve that problem, and with ongoing updates, it gets better and better at it.
+While I'm a big fan of [SQL](../sql/sfmc-sql-basics.mdx/), I know it's not a tool for everyone. The code-based solutions always make scaling the marketing team much harder. DESelect Segment is currently the best option to solve that problem, and - with ongoing updates - it keeps getting better.
 
 <ButtonRow
  linkLeft='https://appexchange.salesforce.com/appxListingDetail?listingId=a0N3A00000G0yE1UAJ'
@@ -282,7 +283,7 @@ Harvest Tech Labs | [Starts at €350/month](https://activation-studio.com/prici
 
 #### The Good
 
-Activation Studio is a new player that joined the SFMC drag & drop segmentation game. Let's check what are the unique selling points that make it stand out versus already existing solutions:
+Activation Studio is a new player in the SFMC drag & drop segmentation game. Let's check what are the unique selling points that make it stand out:
 
 1. Different target
 
@@ -290,7 +291,7 @@ Activation Studio is not targeting power users but digital marketers that need a
 
 Instead, you can leverage the Attribute Groups built in the Contact Builder Data Designer. While it limits what you can do, it also makes building segments a breeze, as all relationships are already defined.
 
-It lets you quickly create a Data Extension for output and leverage it as an Entry to the Journey. Och, and provide you with engagement benchmarks and analytics of actual performance.
+It also lets you quickly create the final Data Extension and leverage it as an Entry to the Journey. Och, and it provides you with engagement benchmarks and actual performance.
 
 Not a jack-of-all-trades, but a purpose build solution.
 
@@ -304,7 +305,7 @@ Activation Studio segmentation is already significantly cheaper than other optio
 
 #### The Bad
 
-It's a new product, and you can still see its infancy. While fully operational already, some relatively basic features (like folders) are missing.
+It's a new product, and you can still see its infancy. While fully operational, some relatively basic features (like folders) are missing.
 
 However, the development pipeline is full of features, and many improvements will be delivered over the coming months improving the value proposition (and making me rewrite this mini-review).
 
